--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,15 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "json",
+      "program": "${workspaceFolder}/json/json.js",
+      "skipFiles": [
+        "<node_internals>/**"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "my-plugin",
       "program": "${workspaceFolder}/tapable-test/my-plugin.js",
       "skipFiles": [
